--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.containerLayout {
+  @apply mx-auto w-full h-full max-w-[1920px] px-3 xs:px-6 md:px-8 2xl:px-10;
+}
