--- a/app/globals.css
+++ b/app/globals.css
@@ -8,24 +8,24 @@
 
 body { background: #fce6e6;}
 
-#scrollbar::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 10px;
 }
 
 /* Track */
-#scrollbar::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: rgb(236, 221, 221);
   border-radius: 10px;
   margin: 10px;
 }
 
 /* Handle */
-#scrollbar::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background: rgb(212, 107, 107);
   border-radius: 10px;
 }
 
 /* Handle on hover */
-#scrollbar::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
   background: #b04a4a;
 }
